--- a/E_AND_E_Service_Center/pom.xml
+++ b/E_AND_E_Service_Center/pom.xml
@@ -15,6 +15,19 @@
     </properties>
 
     <dependencies>
+
+<!--            <dependency>-->
+<!--                <groupId>com.sun.mail</groupId>-->
+<!--                <artifactId>javax.mail</artifactId>-->
+<!--                <version>1.6.2</version>-->
+<!--            </dependency>-->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/javax.activation/activation &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>javax.activation</groupId>-->
+<!--            <artifactId>activation</artifactId>-->
+<!--            <version>1.1.1</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
